# intenttext-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic.py
intenttext/: __init__.py  merge.py  parser.py  query.py  renderer.py  source.py  trust.py  types.py  validate.py
tests/: test_merge.py  test_parser.py  test_query.py  test_renderer.py  test_source.py  test_validate.py
