[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intenttext"
version = "1.0.0"
description = "IntentText - the semantic document format that is natively JSON"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/intenttext/IntentText"
Repository = "https://github.com/intenttext/intenttext-python"
Documentation = "https://github.com/intenttext/IntentText/blob/main/docs/SPEC.md"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
